feat: Estrutura inicial do projeto com index.html, detalhes.html, style.css e app.js

--- a/detalhes.html
+++ b/detalhes.html
@@ -2,14 +2,14 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Pontos Turísticos de Goiás</title>
+  <title>Detalhes do Ponto Turístico</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Pontos Turísticos de Goiás</h1>
+    <h1>Detalhes do Ponto Turístico</h1>
   </header>
-  <main id="lista-pontos"></main>
+  <main id="detalhes"></main>
   <script src="app.js"></script>
 </body>
 </html>
